README added and minor changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,48 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>Talkative - Real-time Chat Application</title>
+  <meta name="description"
+    content="Connect instantly with friends and colleagues through Talkative - a modern real-time chat application featuring secure messaging, image sharing, and online status tracking." />
+  <meta name="keywords"
+    content="chat app, real-time messaging, instant messaging, online chat, secure messaging, file sharing, web chat" />
+  <meta name="author" content="Ankit Mishra" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Talkative - Real-time Chat Application" />
+  <meta property="og:description"
+    content="Connect instantly with friends and colleagues through Talkative - a modern real-time chat application featuring secure messaging, image sharing, and online status tracking." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://talkative-chat.com" />
+  <meta property="og:image" content="/screenshot-for-readme.png" />
+  <meta property="og:site_name" content="Talkative" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Talkative - Real-time Chat Application" />
+  <meta name="twitter:description"
+    content="Connect instantly with friends and colleagues through Talkative - a modern real-time chat application." />
+  <meta name="twitter:image" content="/screenshot-for-readme.png" />
+
+  <!-- Theme Color for Mobile Browsers -->
+  <meta name="theme-color" content="#3b82f6" />
+  <meta name="msapplication-TileColor" content="#3b82f6" />
+
+  <!-- Additional SEO -->
+  <link rel="canonical" href="https://talkative-chat.com" />
+  <meta name="application-name" content="Talkative" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
